# robocal

./: .gitignore  Pipfile  event_exec.py  main.py  pyproject.toml  radio3.sh  robocal.ini  robocal.ini.example  robocal.service  schedule.py
