[tool.poetry]
name = "robocal"
version = "0.1.0"
description = ""
authors = ["Pietro Brenna <pietrobrenna@hotmail.it>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
caldav = "^0.6.2"
icalevents = "^0.1.23"
icalendar = "^4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
